--- a/WindowsTools.html
+++ b/WindowsTools.html
@@ -1,10 +1,10 @@
 <h1 id="QubesToolsforWindows:advancedsettingsandtroubleshooting">Qubes Tools for Windows: advanced settings and troubleshooting</h1>
 <h2 id="Installablecomponents">Installable components</h2>
-<p>Qubes Tools for Windows (QTW for short) contain several components than can be disabled during installation:</p>
+<p>Qubes Tools for Windows (QTW for short) contain several components than can be enabled or disabled during installation:</p>
 <ul>
 <li>Xen GPL PV drivers (required): drivers for the hardware exposed by Xen.</li>
 <li>Core Windows Agent: qrexec agent and services. Needed for proper integration with Qubes.</li>
-<li>Move user profiles: User profiles directory (c:\users) will be moved into the private disk backed by private.img. This disk will be initialized/formatted automatically if needed. This feature is useful for Windows-based HVM templates, so child AppVMs can have their separate user profiles.</li>
+<li>Move user profiles: User profiles directory (c:\Users) will be moved into the private disk backed by private.img. This disk will be initialized/formatted automatically if needed. This feature is useful for Windows-based HVM templates, so child AppVMs can have their separate user profiles.</li>
 <li>GUI Windows Agent: video driver and gui agent that enable seamless showing of Windows applications on the secure Qubes desktop.</li>
 <li>Disable UAC: disables User Account Control prompts. <em>Is this still needed/wanted? Gui agent can handle UAC prompts now.</em></li>
 </ul>
@@ -129,12 +129,12 @@
 <td style="text-align: left;">Service that monitors session/desktop changes (logon/logoff/locking/UAC...) and simulates SAS sequence (ctrl-alt-del).</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;">move-profiles</td>
-<td style="text-align: left;">Utility that moves user profiles directory to the private disk. It's registered as a group policy machine startup script so that it runs before a user can log in. If something goes wrong during the process it tries to restore everything to original state. At log level 4 it logs every file operation.</td>
+<td style="text-align: left;">prepare-volume</td>
+<td style="text-align: left;">Utility that initializes and formats the disk backed by <code>private.img</code> file. It's registered to run on next system boot during QTW setup, if that feature is selected (it can't run <em>during</em> the setup because Xen block device drivers are not yet active). It in turn registers move-profiles (see below) to run at early boot.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">register-startup-script</td>
-<td style="text-align: left;">Registers move-profiles as a startup script during installation (if enabled).</td>
+<td style="text-align: left;">move-profiles</td>
+<td style="text-align: left;">Utility that moves user profiles directory to the private disk. It's registered as an early boot native executable (similar to chkdsk) so it can run before any profile files are opened by some other process. Its log is in a fixed location: c:\move-profiles.log (it can't use our common logger library so none of the log settings apply).</td>
 </tr>
 </tbody>
 </table>
