--- a/UserDoc.html
+++ b/UserDoc.html
@@ -77,6 +77,7 @@
 <li><strong>Windows VMs</strong>
 <ol>
 <li><a href="/wiki/wiki/WindowsAppVms">Installing and Using Windows-based AppVMs (Qubes R2 Beta 3 and Later)</a></li>
+<li><a href="/wiki/wiki/WindowsTools">Advanced options and troubleshooting of Qubes Tools for Windows</a></li>
 </ol></li>
 <li>Advanced Topics
 <ol>
