--- a/WindowsTools.html
+++ b/WindowsTools.html
@@ -134,7 +134,7 @@
 </tr>
 <tr class="even">
 <td style="text-align: left;">move-profiles</td>
-<td style="text-align: left;">Utility that moves user profiles directory to the private disk. It's registered as an early boot native executable (similar to chkdsk) so it can run before any profile files are opened by some other process. Its log is in a fixed location: c:\move-profiles.log (it can't use our common logger library so none of the log settings apply).</td>
+<td style="text-align: left;">Utility that moves user profiles directory to the private disk. It's registered as an early boot native executable (similar to chkdsk) so it can run before any profile files are opened by some other process. Its log is in a fixed location: <code>c:\move-profiles.log</code> (it can't use our common logger library so none of the log settings apply).</td>
 </tr>
 </tbody>
 </table>
