--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -3,7 +3,7 @@
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management, original core, occasional addons</li>
 <li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - everything <a href="/wiki/wiki/Xen/Linux">Xen/Linux?</a> related :)</li>
-<li>Wojciech Porczyk <code>wojciech@porczyk.eu</code> -- various Linux-related things</li>
+<li>Wojciech Porczyk <code>wojciech at porczyk dot eu</code> -- various Linux-related things</li>
 </ul>
 <h2 id="Contributorstotheopensourcecode">Contributors to the open source code</h2>
 <p>(Roughly in chronology order:)</p>
