--- a/UserFaq.html
+++ b/UserFaq.html
@@ -64,7 +64,7 @@
 <li><a href="https://groups.google.com/group/qubes-devel/browse_frm/thread/31e2d8a47c8b4474?scoring=d&amp;q=GPU&amp;">​Clarifications on GPU security</a></li>
 </ul>
 <h3 id="IsQubesamulti-usersystem">Is Qubes a multi-user system?</h3>
-<p>No. Qubes does not pretend to be a multi-user system. Qubes assumes that the user who controls Dom0 controls the whole system. It would be very difficult to <strong>securely</strong> implement multi-user support. See <a href="https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06">​here</a> for details.]</p>
+<p>No. Qubes does not pretend to be a multi-user system. Qubes assumes that the user who controls Dom0 controls the whole system. It would be very difficult to <strong>securely</strong> implement multi-user support. See <a href="https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06">​here</a> for details.</p>
 <h2 id="InstallationHardwareCompatibility">Installation &amp; Hardware Compatibility</h2>
 <p>(See also: <a href="/wiki/wiki/SystemRequirements">System Requirements</a> and <a href="/wiki/wiki/HCL">Hardware Compatibility List</a>.)</p>
 <h3 id="HowmuchdiskspacedoeseachAppVMrequire">How much disk space does each AppVM require?</h3>
