--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -12,6 +12,7 @@
 <li><a href="/wiki/wiki/TemplateImplementation">Implementation of template sharing and updating</a></li>
 <li><a href="/wiki/wiki/Dom0SecureUpdates">Dom0 secure update mechanism</a></li>
 <li><a href="/wiki/wiki/WindowsDebugging">Debugging Windows VMs</a></li>
+<li><a href="/wiki/wiki/Profiling">Profiling python code</a></li>
 <li><a href="/wiki/wiki/VMSecureUpdates">VM secure update mechanism?</a></li>
 <li><a href="/wiki/wiki/SystemDoc/VMInterface">VM-dom0 internal configuration interface</a></li>
 </ul>
