--- a/HCL.html
+++ b/HCL.html
@@ -707,6 +707,15 @@
 <p>3.11.1-2</p>
 <p>Problems with Audio</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/wSCL-4VL2Ew/cU8-2qyT008J">​jeff</a></p>
+<p>GIGABYTE GA-6PXSV4<br /> (Xeon E5, C604, Aspeed AST2300)</p>
+<p>R17</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>TPM header available</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/yveUu94j26U/40sJaykesaEJ">Nukama</a></p>
 <p>Gigabyte GA-870A-UD3<br /> (Phenom II X4 955, 870/SB850, GTX 460)</p>
 <p>F5a</p>
 <p>Yes</p>
