--- a/HCL.html
+++ b/HCL.html
@@ -487,7 +487,15 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
-<p>MSI GP60-2PE<br /> (i5-4200H, Haswell, _HD Graphics)</p>
+<p>Lenovo Yoga 2<br /> (i3-4010U, Haswell, HD Graphics)</p>
+<p>96CN23WW(V1.09)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>required patching for working wifi</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/3WdYjv4QHIc/YIWiyoWDFBkJ">Vadim</a></p>
+<p>MSI GP60-2PE<br /> (i5-4200H, Haswell, HD Graphics)</p>
 <p>E16GHIMS.109</p>
 <p>Yes</p>
 <p>Yes</p>
