--- a/HCL.html
+++ b/HCL.html
@@ -66,6 +66,14 @@
 <p>R2B2</p>
 <p>No Network, Chipset doesn't support VT-d! <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a> <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
+<p>Apple Mac mini (late 2012)<br /> (i7-3615QM, Ivy Bridge, HD Graphics)</p>
+<p>MM61.88Z.0106.B03.1211161202</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Qubes installation does not work, but running an installed system with some tweaks does.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/sA2JuEEQbdg/kpvaVuMCiFQJ">Miłosław Smyk</a></p>
 <p>Asus N56VZ<br /> (CPU, HM67 Express, HD Graphics)</p>
 <p>N56VZ.216</p>
 <p>Yes</p>
