--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -6,20 +6,20 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
+<li><a href="http://">​Qubes-R2-rc2-x86_64-DVD.iso</a> (coming soon)</li>
+<li><a href="http://">​Digital Signature</a> (coming soon)</li>
+</ul>
+<ul>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2">Installation Guide for Qubes R2</a></strong></li>
+<li><a href="/wiki/wiki/InstallationGuideR2#Upgrading">Upgrading to Qubes R2 rc2</a></li>
+</ul>
+<ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc2-x86_64-DVD.iso/download">​Qubes-R2-rc2-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc2-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2rc2">Installation Guide for Qubes R2 rc2</a></strong></li>
 <li><a href="/wiki/wiki/InstallationGuideR2rc2#Upgrading">Upgrading to Qubes R2 rc2</a></li>
-</ul>
-<ul>
-<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc1-x86_64-DVD.iso/download">​Qubes-R2-rc1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
-<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
-</ul>
-<ul>
-<li><a href="/wiki/wiki/InstallationGuideR2rc1">Installation Guide for Qubes R2 rc1</a> (Use rc2 above instead)</li>
-<li><a href="/wiki/wiki/UpgradeToR2rc1">Upgrading to Qubes R2 rc1</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
 <p>(This is mainly for historical reference, we strongly recommend Qubes R2rc1 above)</p>
