--- a/HCL.html
+++ b/HCL.html
@@ -66,7 +66,7 @@
 <p>R2B2</p>
 <p>No Network, Chipset doesn't support VT-d! <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a> <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
-<p>Asus N56VZ<br /> (CPU, HM67 Express, HD Graphics)</p>
+<p>ASUS N56VZ<br /> (CPU, HM67 Express, HD Graphics)</p>
 <p>N56VZ.216</p>
 <p>Yes</p>
 <p>No</p>
@@ -690,7 +690,7 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
-<p>Asus M4A89GTD USB3/PRO<br /> ()</p>
+<p>ASUS M4A89GTD USB3/PRO<br /> ()</p>
 <p>3029</p>
 <p>Yes</p>
 <p>No</p>
@@ -698,6 +698,14 @@
 <p>R2rc1</p>
 <p>with Phenom II X4 965 and Radeon HD 5750</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/6UPz3B0hg_U/bNcRAMiYJekJ">David Kennedy</a></p>
+<p>ASUS SABERTOOTH 990FX R2.0<br /> (FX-8350, 990FX, GeForce GTX 470)</p>
+<p>2301</p>
+<p>Yes</p>
+<p>Yes</p>
+<p># best achievable QSL - (Qubes Security Level) --&gt;</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/DYDXbVI_x80/CGoHOQobdWwJ">M Astroj</a></p>
 <p>Biostar A880GZ<br /> (AM3+, 880G/SB850)</p>
 <p>R2B3</p>
 <p>3.9.2-2</p>
