--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -6,7 +6,7 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
-<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-x86_64-DVD.iso/download">​Qubes-R2-rc2-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-x86_64-DVD.iso/download">​Qubes-R2-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
