--- a/WindowsAppVms.html
+++ b/WindowsAppVms.html
@@ -8,7 +8,7 @@
 <li>Support for qvm-run and generic qrexec for the Windows VM (e.g. ability to run custom service within/from the Windows VM)</li>
 <li>Xen PV drivers for Windows that increase performance compared to qemu emulated devices</li>
 </ul>
-<p>Qubes Windows Support Tools are not open source and are distributed under a commercial license and their source code is not publicly available.</p>
+<p>Qubes Windows Support Tools are not open source and are distributed under a commercial license and their source code is not publicly available. Current status is: <strong>Beta</strong>.</p>
 <p>NOTE: Currently only 64-bit versions of Windows 7 are support by Qubes Windows Tools.</p>
 <h2 id="InstallingWindowsOSinaQubesVM">Installing Windows OS in a Qubes VM</h2>
 <p>Please refer to <a href="/wiki/wiki/HvmCreate">this page</a> for instructions on how to install Windows in a Qubes VM.</p>
