--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -1,6 +1,6 @@
 <h1 id="OnDigitalSignaturesandKeyVerification">On Digital Signatures and Key Verification</h1>
 <h2 id="WhatDigitalSignaturesCanandCannotProve">What Digital Signatures Can and Cannot Prove</h2>
-<p>Most people--even programmers--”are confused about the basic concepts underlying digital signatures. Therefore, most people should read this section, even if it looks trivial at first sight.</p>
+<p>Most people – even programmers – are confused about the basic concepts underlying digital signatures. Therefore, most people should read this section, even if it looks trivial at first sight.</p>
 <p>Digital signatures can prove both <strong>authenticity</strong> and <strong>integrity</strong> to a reasonable degree of certainty. <strong>Authenticity</strong> ensures that a given file was indeed created by the person who signed it (i.e., that it was not forged by a third party). <strong>Integrity</strong> ensures that the contents of the file have not been tampered with (i.e., that a third party has not undetectably altered its contents <em>en route</em>).</p>
 <p>Digital signatures <strong>cannot</strong> prove any other property, e.g., that the signed file is not malicious. In fact, there is nothing that could stop someone from signing a malicious program (and it happens from time to time in reality).</p>
 <p>The point is, of course, that people must choose who they will trust (e.g., Linus Torvalds, Microsoft, the Qubes Project, etc.) and assume that if a given file was signed by a trusted party, then it should not be malicious or buggy in some horrible way. But the decision of whether to trust any given party is beyond the scope of digital signatures. It's more of a sociological and political decision.</p>
@@ -8,40 +8,50 @@
 <p>By verifying all the files we download which purport to be authored by a party we've chosen to trust, we eliminate concerns about the bad things discussed above, since we can easily detect whether any files have been tampered with (and subsequently choose to refrain from executing, installing, or opening them).</p>
 <p>However, for digital signatures to make any sense, we must ensure that the public keys we use for signature verification are indeed the original ones. Anybody can generate a GPG key pair that purports to belong to &quot;The Qubes Project,&quot; but of course only the key pair that we (i.e., the Qubes developers) generated is the legitimate one. The next section explains how to verify the validity of the Qubes signing keys.</p>
 <h2 id="ImportingQubesSigningKeys">Importing Qubes Signing Keys</h2>
-<p>Every file published by the Qubes Project (rpm, tgz, git repositories) is digitally signed by one of the developer or release keys. Each such key is signed by the Qubes Master Signing Key (<code>0x36879494</code>).</p>
-<p>The public portion of the Master Key can be downloaded from a keyserver, e.g.:</p>
+<p>Every file published by the Qubes Project (ISO, RPM, TGZ files and git repositories) is digitally signed by one of the developer or release signing keys. Each such key is signed by the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>).</p>
+<p>The public portion of the Qubes Master Signing Key can be imported directly from a keyserver,</p>
 <pre class="wiki"><code>gpg --recv-keys 0x36879494</code></pre>
-<p>For additional security we also publish the the Master Key's fingerprint here in this document:</p>
+<p>or downloaded <a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​here</a> and imported with gpg.</p>
+<pre class="wiki"><code>$ gpg --import ./qubes-master-signing-key.asc </code></pre>
+<p>For additional security we also publish the fingerprint of the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>) here in this document:</p>
 <pre class="wiki"><code>pub   4096R/36879494 2010-04-01
       Key fingerprint = 427F 11FD 0FAA 4B08 0123  F01C DDFA 1A3E 3687 9494
 uid   Qubes Master Signing Key</code></pre>
 <p>There should also be a copy of this key at the project's main website, as well as in the archives of the project's <a href="https://groups.google.com/forum/#!msg/qubes-devel/RqR9WPxICwg/kaQwknZPDHkJ">​developer</a> and <a href="https://groups.google.com/d/msg/qubes-users/CLnB5uFu_YQ/ZjObBpz0S9UJ">​user</a> mailing lists.</p>
-<p>Once you have downloaded and verified the fingerprint of the Master Signing Key, you should import this key and set its trust level to &quot;ultimate&quot; (oh, well), so that it can be used to automatically verify all the developers' keys:</p>
+<p>Once you have obtained the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>), you should verify the fingerprint of this key very carefully. Then set its trust level to &quot;ultimate&quot; (oh, well), so that it can be used to automatically verify all the keys signed by the Qubes Master Signing Key:</p>
 <pre class="wiki"><code>gpg --edit-key 0x36879494
-and then: trust, 5, y, q</code></pre>
-<p>Now you can easily download any of the developer or release keys that happen to be used to sign particular rpm, tgz, or git tags. E.g.:</p>
-<pre class="wiki"><code>$ gpg --recv-keys AC1BF9B3
-gpg: requesting key AC1BF9B3 from hkp server keys.gnupg.net
-gpg: key AC1BF9B3: public key &quot;Qubes OS Release 1 Signing Key&quot; imported
-gpg: no ultimately trusted keys found
+and then: fpr, trust, 5, y, q</code></pre>
+<p>Now you can easily download any of the developer or release signing keys that happen to be used to sign particular ISO, RPM, TGZ files or git tags.</p>
+<p>For example: Qubes OS Release 2 Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-release-2-signing-key.asc">​`0x0A40E458`</a>) is used for all Release 2 ISO images.</p>
+<pre class="wiki"><code>$ gpg --recv-keys 0x0A40E458
+gpg: requesting key 0A40E458 from hkp server keys.gnupg.net
+gpg: key 0A40E458: public key &quot;Qubes OS Release 2 Signing Key&quot; imported
+gpg: 3 marginal(s) needed, 1 complete(s) needed, PGP trust model
+gpg: depth: 0  valid:   1  signed:   1  trust: 0-, 0q, 0n, 0m, 0f, 1u
+gpg: depth: 1  valid:   1  signed:   0  trust: 1-, 0q, 0n, 0m, 0f, 0u
 gpg: Total number processed: 1
 gpg:               imported: 1  (RSA: 1)</code></pre>
-<p>You can also download all the currently used developers' keys (and also a copy of the Master Key) in the keys directory on our server:</p>
-<p><a href="http://keys.qubes-os.org/keys/">​http://keys.qubes-os.org/keys/</a></p>
-<p>The developer keys are set to be valid for 1 year only, while the Qubes Master Signing Key has no expiration date. This latter key was generated and is kept only within a dedicated, air-gapped &quot;vault&quot; machine, and the private portion will (hopefully) never leave this isolated machine.</p>
-<p>You can now verify the ISO matches its signature:</p>
-<pre class="wiki"><code>$ gpg --verify Qubes-R2-rc1-x86_64-DVD.iso{.asc,}
-gpg: Signature made Sun 20 Apr 2014 10:06:13 BST using RSA key ID 0A40E458
-gpg: Good signature from &quot;Qubes OS Release 2 Signing Key&quot;</code></pre>
-<p>The key used to sign this ISO should be signed by the Qubes master key:</p>
+<p>You can also download all the currently used developers' signing keys and current and older release signing keys (and also a copy of the Qubes Master Signing Key) in the keys directory on our server:</p>
+<p><a href="https://keys.qubes-os.org/keys/">​https://keys.qubes-os.org/keys/</a></p>
+<p>The developer signing keys are set to be valid for 1 year only, while the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>) has no expiration date. This latter key was generated and is kept only within a dedicated, air-gapped &quot;vault&quot; machine, and the private portion will (hopefully) never leave this isolated machine.</p>
+<p>You can now verify the ISO image (Qubes-R2-x86_64-DVD.iso) matches its signature (Qubes-R2-x86_64-DVD.iso.asc):</p>
+<pre class="wiki"><code>$ gpg --verify Qubes-R2-x86_64-DVD.iso.asc
+or
+$ gpg -v Qubes-R2-x86_64-DVD.iso.asc
+gpg: armor header: Version: GnuPG v1
+gpg: assuming signed data in `Qubes-R2-x86_64-DVD.iso&#39;
+gpg: Signature made Tue Sep 23 08:38:40 2014 UTC using RSA key ID 0A40E458
+gpg: using PGP trust model
+gpg: Good signature from &quot;Qubes OS Release 2 Signing Key&quot;
+gpg: binary signature, digest algorithm SHA1
+</code></pre>
+<p>The Release 2 Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-release-2-signing-key.asc">​`0x0A40E458`</a>) used to sign this ISO image should be signed by the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>):</p>
 <pre class="wiki"><code>$ gpg --list-sig 0A40E458
 pub   4096R/0A40E458 2012-11-15
 uid                  Qubes OS Release 2 Signing Key
-sig          26CA2CD7 2013-02-26  [User ID not found]
-sig          C55BCFE3 2014-02-20  [User ID not found]
 sig          36879494 2012-11-15  Qubes Master Signing Key
 sig 3        0A40E458 2012-11-15  Qubes OS Release 2 Signing Key</code></pre>
-<p>Having problems verifying the ISO? See this thread:</p>
+<p>Having problems verifying the ISO images? Make sure you have the corresponding release signing key and see this thread:</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/4bdec1cd19509b38/9f8e219c41e1b232">​https://groups.google.com/group/qubes-devel/browse_thread/thread/4bdec1cd19509b38/9f8e219c41e1b232</a></p>
 <h2 id="VerifyingQubesCode">Verifying Qubes Code</h2>
 <p>Developers who fetch code from our Git server should always verify tags on the latest commit. Any commits that are not followed by a signed tag should not be trusted!</p>
