--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -25,4 +25,5 @@
 <li><a href="https://groups.google.com/d/msg/qubes-devel/XgTo6L8-5XA/JLOadvBqnqMJ">​Qubes Security Bulletin #9</a> (Qubes qvm-open-in-[d]vm environment inter-VM leak)</li>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/VO1URqYWbok/8vp-VnE7iXEJ">​Qubes Security Bulletin #10</a> (Qubes pulseaudio &amp; vchan bugs, Xen XSA 87)</li>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/QHXI0qXAPhk/gSF7m4KD37QJ">​Qubes Security Bulletin #11</a> (Qubes clipboard inter-VM leak)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/HgQ_aWt-EBU/8VWzu2IrQdQJ">​Qubes Security Bulletin #12</a> (Memory leak in Xen hypervisor via RDMSR emulation bug (XSA 108))</li>
 </ul>
