--- a/HCL.html
+++ b/HCL.html
@@ -490,6 +490,14 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
+<p>LENOVO Thinkpad Yoga<br /> (i5-4200U, Haswell, embedded VGA)</p>
+<p>GQET35WW (1.15 )</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>touchscreen not working</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/kTRBgRc7jyY/aBp61c6iYL4J">Gábor Dolhai</a></p>
 <p>Lenovo Yoga 2<br /> (i3-4010U, Haswell, HD Graphics)</p>
 <p>96CN23WW(V1.09)</p>
 <p>Yes</p>
@@ -624,6 +632,13 @@
 <p>No</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/D16dM3rg8Iw/zOEZmjTJkRIJ">Andrew Sorensen</a></p>
+<p>GIGABYTE BRIX Pro / Ultra Compact PC (M4HM85P-00)<br /> (i5-4570R, HM87, Iris Pro 5200)</p>
+<p>F2</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/uvBcfCB8dxk/ZX-tV3y2tXEJ">Bjarne Thomsen</a></p>
 <p>HP Compaq dc7800 SFF<br /> (E8400, Q35)</p>
 <p>1.32</p>
 <p>Yes</p>
