--- a/UserDoc.html
+++ b/UserDoc.html
@@ -12,6 +12,7 @@
 <li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating Software in dom0</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">Copying Files to and from dom0</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup, Restoration, and Migration</a></li>
+<li><a href="/wiki/wiki/QrexecPolicy">Qubes Policy for InterVM Services?</a></li>
 <li>Advanced Topics
 <ol>
 <li><a href="/wiki/wiki/AntiEvilMaid">Installing Anti Evil Maid</a></li>
