Qrexec2Implementation changed
Corrected link to diagram

--- a/Qrexec2Implementation.html
+++ b/Qrexec2Implementation.html
@@ -21,7 +21,7 @@
 <h2 id="Allthepiecestogetheratwork">All the pieces together at work</h2>
 <p>Note: this section is not needed to use qrexec for writing Qubes apps. Also note the qrexec framework implemention in Qubes R3 significantly differs from what is described in this section.</p>
 <p>The VM-VM channels in Qubes R2 are made via &quot;gluing&quot; two VM-Dom0 and Dom0-VM vchan connections:</p>
-<p><a href="/wiki/attachment/wiki/Qrexec2Implementation/qrexec2-implemention.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qrexec2-implemention.png&quot; attached to Qrexec2Implementation" alt="No image &quot;qrexec2-implemention.png&quot; attached to Qrexec2Implementation" /></a></p>
+<p><a href="/wiki/attachment/wiki/Qrexec2Implementation/qrexec2-internals.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qrexec2-internals.png&quot; attached to Qrexec2Implementation" alt="No image &quot;qrexec2-internals.png&quot; attached to Qrexec2Implementation" /></a></p>
 <p>Note: Dom0 never examines the actual data flowing in neither of the two vchan connections.</p>
 <p>When a user in a source VM executes <code>qrexec-client-vm</code> utility, the following steps are taken:</p>
 <ul>
